# opengl-scratch

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  imgui.ini
assets/: uvtemplate.tga
cmake_modules/: FindGLFW.cmake  FindSDL2.cmake  FindSFML.cmake
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
imgui/: imconfig.h
shaders/: SimpleFragmentShader.fs  SimpleTextureShader.fs  SimpleVertexShader.vs
src/: Cube.cpp  Cube.hpp  ObjLoader.cpp  ObjLoader.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VBOIndexer.cpp  VBOIndexer.hpp  main.cpp  util.cpp  util.h
